initial draft of gen AI chatBot tutorial

--- a/docs/howtos/solutions/microservices/common-data/microservices-arch.mdx
+++ b/docs/howtos/solutions/microservices/common-data/microservices-arch.mdx
@@ -1,4 +1,4 @@
-You eventually land on the following architecture:
+Lets take a look at the architecture of the demo application:
 
 1. `products service`: handles querying products from the database and returning them to the frontend
 1. `orders service`: handles validating and creating orders
