--- a/docs/howtos/solutions/mobile-banking/account-dashboard/index-account-dashboard.mdx
+++ b/docs/howtos/solutions/mobile-banking/account-dashboard/index-account-dashboard.mdx
@@ -6,9 +6,13 @@ slug: /howtos/solutions/mobile-banking/account-dashboard
 authors: [prasan, will]
 ---
 
+import Authors from '@theme/Authors';
+
 import GeneralAdditionalResources from '../common-mb/additional-resources.mdx';
 import MobileBankingSourceCode from '../common-mb/source-code-tip.mdx';
 import MobileBankingDataSeeding from '../common-mb/data-seeding.mdx';
+
+<Authors frontMatter={frontMatter} />
 
 <MobileBankingSourceCode />
 
