--- a/docs/howtos/solutions/mobile-banking/session-management/index-session-management.mdx
+++ b/docs/howtos/solutions/mobile-banking/session-management/index-session-management.mdx
@@ -6,11 +6,15 @@ slug: /howtos/solutions/mobile-banking/session-management
 authors: [prasan, will]
 ---
 
+import Authors from '@theme/Authors';
+
 import GeneralAdditionalResources from '../common-mb/additional-resources.mdx';
 import MobileBankingSourceCode from '../common-mb/source-code-tip.mdx';
 import MobileBankingDataSeeding from '../common-mb/data-seeding.mdx';
 
 import MobileBankingDashboardBalance from './images/demo-dashboard-balance-widget.png';
+
+<Authors frontMatter={frontMatter} />
 
 <MobileBankingSourceCode />
 
