added gen ai tutorial to sidebar

--- a/docs/howtos/solutions/vector/gen-ai-chatbot/index-gen-ai-chatbot.mdx
+++ b/docs/howtos/solutions/vector/gen-ai-chatbot/index-gen-ai-chatbot.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-solutions-gen-ai-chatbot
-title: How to Build GenAI Chatbot Using LangChain and Redis
-sidebar_label: How to Build GenAI Chatbot Using LangChain and Redis
+title: How to Build a GenAI Chatbot Using LangChain and Redis
+sidebar_label: How to Build a GenAI Chatbot Using LangChain and Redis
 slug: /howtos/solutions/vector/gen-ai-chatbot
 authors: [prasan, will]
 ---
