GenAI chatbot tile in solutions overview

--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -166,5 +166,10 @@ Learn how to easily build, test and deploy code for common microservice and cach
   />
 </div>
 <div class="col">
+ <RedisCard
+    title="GenAI Chatbot"
+    description="Build a GenAI Chatbot Using LangChain and Redis"
+    page="/howtos/solutions/vector/gen-ai-chatbot"
+  />
 </div>
 </div>
