Semantic Image Based Querying tutorial added - draft 1

--- a/docs/howtos/solutions/vector/common-ai/microservices-ecommerce-ai.mdx
+++ b/docs/howtos/solutions/vector/common-ai/microservices-ecommerce-ai.mdx
@@ -24,3 +24,7 @@ The e-commerce microservices application consists of a frontend, built using [Ne
 
   ![redis microservices e-commerce app frontend admin page](images/06-admin-charts.png)
   ![redis microservices e-commerce app frontend admin page](images/07-admin-top-trending.png)
+
+- `Settings` : A settings page to control search bar, show/ hide chat bot and other features
+
+  ![redis microservices e-commerce app frontend settings page](images/08-settings.png)
