--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -173,3 +173,14 @@ Learn how to easily build, test and deploy code for common microservice and cach
   />
 </div>
 </div>
+
+<div class="row">
+
+<div class="col">
+ <RedisCard
+    title="Semantic Image Based Querying"
+    description="Semantic Image Based Queries Using LangChain (OpenAI) and Redis"
+    page="/howtos/solutions/vector/image-summary-search"
+  />
+</div>
+</div>
