--- a/docs/howtos/solutions/vector/common-ai/microservices-ecommerce-ai.mdx
+++ b/docs/howtos/solutions/vector/common-ai/microservices-ecommerce-ai.mdx
@@ -1,30 +1,29 @@
-The e-commerce microservices application consists of a frontend, built using [Next.js](https://nextjs.org/) with [TailwindCSS](https://tailwindcss.com/). The application backend uses [Node.js](https://nodejs.org). The data is stored in
-[Redis](https://redis.com/try-free/) and MongoDB/ Postgressql using [Prisma](https://www.prisma.io/docs/reference/database-reference/supported-databases). Below you will find screenshots of the frontend of the e-commerce app:
+The e-commerce microservices application consists of a frontend, built using [Next.js](https://nextjs.org/) with [TailwindCSS](https://tailwindcss.com/). The application backend uses [Node.js](https://nodejs.org). The data is stored in [Redis](https://redis.com/try-free/) and either MongoDB or PostgreSQL, using [Prisma](https://www.prisma.io/docs/reference/database-reference/supported-databases). Below are screenshots showcasing the frontend of the e-commerce app.
 
-- `Dashboard`: Shows the list of products with search functionality
+**Dashboard:** Displays a list of products with different search functionalities, configurable in the settings page.
+![Redis Microservices E-commerce App Frontend - Products Page](images/01-dashboard.png)
 
-  ![redis microservices e-commerce app frontend products page](images/01-dashboard.png)
+**Settings:** Accessible by clicking the gear icon at the top right of the dashboard. Control the search bar, chatbot visibility, and other features here.
+![Redis Microservices E-commerce App Frontend - Settings Page](images/08-settings-ai.png)
 
-- `Chat bot`: The chat bot is available on the bottom right corner of the page. It can be used to search for products and view the product details.
+**Dashboard (Semantic Text Search):** Configured for semantic text search, the search bar enables natural language queries. Example: "pure cotton blue shirts."
+![Redis Microservices E-commerce App Frontend - Semantic Text Search](images/01-dashboard-semantic-text.png)
 
-  ![redis microservices e-commerce app frontend chat bot](images/02-ai-bot.png)
+**Dashboard (Semantic Image-Based Queries):** Configured for semantic image summary search, the search bar allows for image-based queries. Example: "Left chest nike logo."
+![Redis Microservices E-commerce App Frontend - Semantic Image Search](images/01-dashboard-semantic-image.png)
 
-  Clicking on a product in the chat shows the product details on dashboard
+**Chat Bot:** Located at the bottom right corner of the page, assisting in product searches and detailed views.
+![Redis Microservices E-commerce App Frontend - Chat Bot](images/02-ai-bot.png)
 
-  ![redis microservices e-commerce app frontend product details](images/03-ai-bot-product.png)
+Selecting a product in the chat displays its details on the dashboard.
+![Redis Microservices E-commerce App Frontend - Product Details](images/03-ai-bot-product.png)
 
-- `Shopping Cart`: Add products to the cart, then check out using the "Buy Now" button
-  ![redis microservices e-commerce app frontend shopping cart](images/04-shopping-cart.png)
+**Shopping Cart:** Add products to the cart and check out using the "Buy Now" button.
+![Redis Microservices E-commerce App Frontend - Shopping Cart](images/04-ai-product-shopping-cart.png)
 
-- `Order history`: Once an order is placed, the `Orders` link in the top navigation bar shows the order status and history
+**Order History:** Post-purchase, the 'Orders' link in the top navigation bar shows the order status and history.
+![Redis Microservices E-commerce App Frontend - Order History Page](images/05-order-history.png)
 
-  ![redis microservices e-commerce app frontend order history page](images/05-order-history.png)
-
-- `Admin`: The `admin` link in the top navigation bar shows purchase stats and trending products.
-
-  ![redis microservices e-commerce app frontend admin page](images/06-admin-charts.png)
-  ![redis microservices e-commerce app frontend admin page](images/07-admin-top-trending.png)
-
-- `Settings` : A settings page to control search bar, show/ hide chat bot and other features
-
-  ![redis microservices e-commerce app frontend settings page](images/08-settings.png)
+**Admin Panel:** Accessible via the 'admin' link in the top navigation. Displays purchase statistics and trending products.
+![Redis Microservices E-commerce App Frontend - Admin Page](images/06-admin-charts.png)
+![Redis Microservices E-commerce App Frontend - Admin Page](images/07-admin-top-trending.png)
