triggers and functions tutorial added - draft 1

--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -177,10 +177,33 @@ Learn how to easily build, test and deploy code for common microservice and cach
 <div class="row">
 
 <div class="col">
- <RedisCard
+  <RedisCard
+    title="Semantic Text Search"
+    description="Semantic Text Search Using LangChain (OpenAI) and Redis"
+    page="/howtos/solutions/vector/semantic-text-search"
+  />
+</div>
+
+<div class="col">
+  <RedisCard
     title="Semantic Image Based Querying"
     description="Semantic Image Based Queries Using LangChain (OpenAI) and Redis"
     page="/howtos/solutions/vector/image-summary-search"
   />
 </div>
+
+</div>
+
+## Triggers and Functions
+
+<div class="row">
+
+<div class="col">
+  <RedisCard
+    title="Triggers and Functions in Redis"
+    description="Getting Started With Triggers and Functions in Redis"
+    page="/howtos/solutions/triggers-and-functions/getting-started"
+  />
+</div>
+
 </div>
